Last contribtuion Collapses box1 messed (Fixed)

--- a/style.css
+++ b/style.css
@@ -275,6 +275,7 @@
   display: flex;
   justify-content: space-evenly;
   background-color: #e2e7e6;
+  flex-wrap: wrap;
 }
 
 .box-content h2 {
@@ -298,7 +299,8 @@
 }
 
 .box {
-  height: 420px;
+  min-height: 420px;
+  height: auto;
   color: black;
   
   width: 23%;
@@ -307,20 +309,16 @@
 
 }
 
-.box-1 {
+.box1 {
+  display: grid;
   background-color: white;
   padding: 20px;
   margin-top: 15px;
   
 }
 
-.box-img-grid {
-  display: grid;
-  grid-template-columns: repeat(2, 1fr);
-  gap: 60px;
-  margin-top: 10px;
-  size: auto;
-}
+
+
 
 .box-img-grid img {
   width: 100%;
@@ -333,6 +331,7 @@
     grid-template-columns: repeat(2, 1fr);
     gap: 20px;
     text-align: center;
+    margin-top: 15px;
 }
 
 .product {
@@ -345,8 +344,9 @@
 
 
 .product img {
-    width: 160px;
+    width: 140px;
     height: auto;
+    object-fit: contain;
 }
 
 .product p {
